fixed overlaping div in map, ran into problem with gear div again in phone, need clear fix this time, about to implement

--- a/final/css/conans-style.css
+++ b/final/css/conans-style.css
@@ -70,20 +70,9 @@ h2 {
         border: 1px solid #CC0001;
 }
 .map {
-    height: 500;
-    frameborder: 0;
     border: 0;
     pointer-events: none;
-}
-.local-button {
-    color: #000;
-    font-size: 25px;
-    border: 2px groove black;
-    border-radius: 5px;
-    font-weight:600;
-    text-decoration: none;
-    background:  linear-gradient(to bottom, rgba(20,20,20,0.2) 0%, rgba(0,0,0,0.1) 50%), #fff;
-    padding: 2px 4px;
+    margin-top: 10px;
 }
 #shop {
     background-color: #CC0001;
